# Quadcopter_SimCon

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tune_lee_controller.py
archive/: cost_functions.py  ctrl.py  debug_full_simulation_step.py  figure8_lap_time_optimization.py  parameter_tuner.py  run_3D_simulation_configurable_v1.py  test_auto_scaling.py  test_parameter_tuning.py
archive/configs/: custom_config.json  hex_config.json  octo_config.json  quad_config.json
archive/tests/: DEBUG_SUMMARY.md  README_configurable.md  compare_simulations.py  compare_trajectories.py  comprehensive_parameter_verification.py  debug_control_inputs.py  debug_control_step.py  debug_controller.py  debug_controller_comparison.py  debug_controller_integration.py  debug_motor_allocation.py  debug_parameters.py  debug_parameters_during_sim.py  final_validation.py  fix_allocation_scaling.py  hover_test.py  match_original_parameters.py  simple_hover_test.py  solution_summary.md  test_allocation_matrices.py  test_coordinate_frames.py  test_matched_drone.py  test_matched_hover.py  test_motor_pipeline.py  test_motor_scaling.py  test_quadratic_fix.py  test_trajectory_matching.py  test_trajectory_tracking.py  verify_matched_simulation.py
drone_sim/lee_control/: base_lee_controller.py  lee_controller.py  position_control.py
drone_sim/px4_ctrl/: px4_based_ctrl.py
drone_sim/simulation/: drone_configuration.py  drone_simulator.py  propeller_data.py
drone_sim/trajectory_generation/: trajectory.py  waypoints.py
drone_sim/utils/: animation.py
examples/: run_3D_simulation_lee_ctrl.py  run_3D_simulation_px4ctrl.py  tuning_configurations.py
