[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quadcopter-simcon"
version = "1.0.0"
description = "A comprehensive quadcopter simulation and control framework with configurable drone types"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "John Bass", email = "john.bobzwik@gmail.com"},
]
maintainers = [
    {name = "John Bass", email = "john.bobzwik@gmail.com"},
]
keywords = ["quadcopter", "simulation", "control", "robotics", "drone", "flight", "dynamics"]
dynamic = ["entry-points"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "sympy>=1.8.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel",
]

[project.scripts]
drone-sim = "examples.run_3D_simulation_configurable:main"

[project.urls]
Homepage = "https://github.com/bobzwik/Quadcopter_SimCon"
Documentation = "https://github.com/bobzwik/Quadcopter_SimCon/wiki"
Repository = "https://github.com/bobzwik/Quadcopter_SimCon.git"
"Bug Tracker" = "https://github.com/bobzwik/Quadcopter_SimCon/issues"

[tool.setuptools.packages.find]
include = ["drone_sim*", "examples*"]
exclude = ["archive*", "tests*"]

[tool.setuptools.package-data]
drone_sim = ["configs/*.json"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  archive/
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]